scene/workspace: change rounding policy in 'addCandidates()'

Normal rounding matches how the renderer maps the surface coordinates
to the screen.

This allows direct scanout for various fractional scaling values.

BUG: 517264